--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 % adding pointlessnumbers to avoid "Figure 1.1.: ..."
-\documentclass[11pt, a4paper, headsepline, footsepline, pointlessnumbers]{scrbook}
+%\documentclass[11pt, a4paper, headsepline, footsepline, pointlessnumbers]{scrbook}
+\documentclass[11pt, a4paper, headsepline, footsepline, pointlessnumbers, draft]{scrbook}
 
 \pdfoutput=1
 
