remove obsolete option

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % adding pointlessnumbers to avoid "Figure 1.1.: ..."
-%\documentclass[11pt, a4paper, headsepline, footsepline, pointlessnumbers]{scrbook}
-\documentclass[11pt, a4paper, headsepline, footsepline, pointlessnumbers, draft]{scrbook}
+\documentclass[11pt, a4paper, headsepline, footsepline, numbers=noenddot]{scrbook}
+%\documentclass[11pt, a4paper, headsepline, footsepline, numbers=noenddot, draft]{scrbook}
 
 \pdfoutput=1
 
